--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AgoraCRSH">
 
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+
         <!-- Pantalla de inicio -->
         <activity
             android:name=".LoginActivity"
@@ -37,10 +46,10 @@
 
         <!-- Reserva de salas -->
         <activity android:name=".SalaReservaActivity" android:exported="true" />
-
-        <!-- Aquí puedes agregar más actividades nuevas si las vas creando -->
+        <activity android:name=".Sala2ReservaActivity" android:exported="true" />
+        <!-- Reserva de salas DEL ADMIN -->
+        <activity android:name=".AdminSolicitudesSalaActivity" android:exported="true" />
         <!--
-        <activity android:name=".VerSolicitudesSalaActivity" android:exported="true" />
         <activity android:name=".InventarioActivity" android:exported="true" />
         <activity android:name=".CalendarioActivity" android:exported="true" />
         -->
